--- a/distill/examples/bibliography.bib
+++ b/distill/examples/bibliography.bib
@@ -26,3 +26,10 @@ author={Rush, Alexander and Nguyen, Vincent and Klein, Guillaume},
 year={2018},
 month={Apr}
 }
+
+@incollection{vader,
+title={VADER: A Parsimonious Rule-based Model for Sentiment Analysis of Social Media Text},
+author={Hutto, C.J and Gilbert, E.E},
+booktitle={Eighth International Conference on Weblogs and Social Media (ICWSM-14). Ann Arbor, MI.},
+year={2014}
+}
