--- a/distill/examples/bibliography.bib
+++ b/distill/examples/bibliography.bib
@@ -29,7 +29,16 @@ month={Apr}
 
 @incollection{vader,
 title={VADER: A Parsimonious Rule-based Model for Sentiment Analysis of Social Media Text},
+url={http://comp.social.gatech.edu/papers/icwsm14.vader.hutto.pdf},
 author={Hutto, C.J and Gilbert, E.E},
 booktitle={Eighth International Conference on Weblogs and Social Media (ICWSM-14). Ann Arbor, MI.},
 year={2014}
+}
+
+@misc{openccg,
+title={OpenCCG: The OpenNLP CCG Library},
+url={http://openccg.sourceforge.net/},
+author={White, Michael and others},
+year={2019},
+month={Jul}
 }
